--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
     <title>Piedra, Papel o Tijera</title>
   </head>
   <body>
+    <audio autoplay loop>
+      <source src="music/backgroundMusic.mp3" type="audio/mpeg"/>
+    </audio>
     <div class="container">
       <h1>Piedra, Papel o Tijera</h1>
 
