--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   </head>
   <body>
     <audio autoplay loop>
-      <source src="music/backgroundMusic.mp3" type="audio/mpeg"/>
+      <source src="music/backgroundMusic.mp3" type="audio/mpeg" />
     </audio>
     <div class="container">
       <h1>Piedra, Papel o Tijera</h1>
@@ -37,10 +37,17 @@
       </div>
 
       <footer>
-        Made by
-        <a target="_blank" href="https://www.instagram.com/gastonedgardorocha/"
-          >Gastón Rocha</a
-        >
+        <a href="https://www.facebook.com/Gaston.E.Rocha/" target="_blank"
+          ><img class="socialMedia" src="Imagenes/iconofacebook.png"
+        /></a>
+        <a
+          href="https://api.whatsapp.com/send?phone=5493815937820"
+          target="_blank"
+          ><img class="socialMedia" src="Imagenes/iconowhatsapp.png"
+        /></a>
+        <a href="https://www.instagram.com/gastonedgardorocha/" target="_blank"
+          ><img class="socialMedia" src="Imagenes/iconoinstagram.png"
+        /></a>
       </footer>
     </div>
     <script src="app.js"></script>
