Create HEADER and FOOTER

--- a/index.html
+++ b/index.html
@@ -15,9 +15,10 @@
     <audio autoplay loop>
       <source src="music/backgroundMusic.mp3" type="audio/mpeg" />
     </audio>
+    <header>
+      <h1>PIEDRA, PAPEL O TIJERA</h1>
+    </header>
     <div class="container">
-      <h1>Piedra, Papel o Tijera</h1>
-
       <div id="result">
         <img id="computadoraImagen" src="" />
         <div id="startText">Escoge para jugar</div>
@@ -35,21 +36,22 @@
           <img src="Imagenes/tijera.png" />
         </button>
       </div>
-
-      <footer>
-        <a href="https://www.facebook.com/Gaston.E.Rocha/" target="_blank"
-          ><img class="socialMedia" src="Imagenes/iconofacebook.png"
-        /></a>
-        <a
-          href="https://api.whatsapp.com/send?phone=5493815937820"
-          target="_blank"
-          ><img class="socialMedia" src="Imagenes/iconowhatsapp.png"
-        /></a>
-        <a href="https://www.instagram.com/gastonedgardorocha/" target="_blank"
-          ><img class="socialMedia" src="Imagenes/iconoinstagram.png"
-        /></a>
-      </footer>
     </div>
+    <footer>
+      <div id="imageContainer">
+      <a href="https://www.facebook.com/Gaston.E.Rocha/" target="_blank"
+        ><img class="socialMedia" src="Imagenes/iconofacebook.png"
+      /></a>
+      <a
+        href="https://api.whatsapp.com/send?phone=5493815937820"
+        target="_blank"
+        ><img class="socialMedia" src="Imagenes/iconowhatsapp.png"
+      /></a>
+      <a href="https://www.instagram.com/gastonedgardorocha/" target="_blank"
+        ><img class="socialMedia" src="Imagenes/iconoinstagram.png"
+      /></a>
+    </div>
+    </footer>
     <script src="app.js"></script>
   </body>
 </html>
