--- a/index.html
+++ b/index.html
@@ -12,12 +12,10 @@
     <title>Piedra, Papel o Tijera</title>
   </head>
   <body>
-    <audio autoplay loop>
-      <source src="music/backgroundMusic.mp3" type="audio/mpeg" />
-    </audio>
     <header>
       <h1>PIEDRA, PAPEL O TIJERA</h1>
     </header>
+    <audio src="music/backgroundMusic.mp3" type="audio/mpeg" autoplay></audio>
     <div class="container">
       <div id="result">
         <img id="computadoraImagen" src="" />
