--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <header>
       <h1>PIEDRA, PAPEL O TIJERA</h1>
     </header>
-    <audio src="music/backgroundMusic.mp3" type="audio/mpeg" autoplay></audio>
+    <audio src="music/backgroundMusic.mp3" type="audio/mpeg" autoplay loop></audio>
     <div class="container">
       <div id="result">
         <img id="computadoraImagen" src="" />
