--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="icon" href="Imagenes/icogr.ico">
     <link
       href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&display=swap"
       rel="stylesheet"
@@ -15,7 +16,12 @@
     <header>
       <h1>PIEDRA, PAPEL O TIJERA</h1>
     </header>
-    <audio src="music/backgroundMusic.mp3" type="audio/mpeg" autoplay loop></audio>
+    <audio
+      autoplay
+      loop
+      src="music/backgroundMusic.mp3"
+      type="audio/mpeg"
+    ></audio>
     <div class="container">
       <div id="result">
         <img id="computadoraImagen" src="" />
