--- a/index.html
+++ b/index.html
@@ -1,61 +1,51 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="icon" href="Imagenes/icogr.ico">
-    <link
-      href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&display=swap"
-      rel="stylesheet"
-    />
-    <link rel="stylesheet" href="style.css" />
-    <title>Piedra, Papel o Tijera</title>
-  </head>
-  <body>
-    <header>
-      <h1>PIEDRA, PAPEL O TIJERA</h1>
-    </header>
-    <audio
-      autoplay
-      loop
-      src="music/backgroundMusic.mp3"
-      type="audio/mpeg"
-    ></audio>
-    <div class="container">
-      <div id="result">
-        <img id="computadoraImagen" src="" />
-        <div id="startText">Escoge para jugar</div>
-        <img id="usuarioImagen" src="" />
-      </div>
 
-      <div id="groupButton">
-        <button id="piedra" type="button">
-          <img src="Imagenes/piedra.png" />
-        </button>
-        <button id="papel" type="button">
-          <img src="Imagenes/papel.png" />
-        </button>
-        <button id="tijera" type="button">
-          <img src="Imagenes/tijera.png" />
-        </button>
-      </div>
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="icon" href="Imagenes/icogr.ico">
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&display=swap"
+    rel="stylesheet" />
+  <link rel="stylesheet" href="style.css" />
+  <title>Piedra, Papel o Tijera</title>
+</head>
+
+<body>
+  <header>
+    <h1>PIEDRA, PAPEL O TIJERA</h1>
+  </header>
+  <div class="container">
+    <div id="result">
+      <img id="computadoraImagen" src="" />
+      <div id="startText">Escoge para jugar</div>
+      <img id="usuarioImagen" src="" />
     </div>
-    <footer>
-      <div id="imageContainer">
-        <a href="https://www.facebook.com/Gaston.E.Rocha/" target="_blank"
-          ><img class="socialMedia" src="Imagenes/iconofacebook.png"
-        /></a>
-        <a
-          href="https://api.whatsapp.com/send?phone=5493815937820"
-          target="_blank"
-          ><img class="socialMedia" src="Imagenes/iconowhatsapp.png"
-        /></a>
-        <a href="https://www.instagram.com/gastonedgardorocha/" target="_blank"
-          ><img class="socialMedia" src="Imagenes/iconoinstagram.png"
-        /></a>
-      </div>
-    </footer>
-    <script src="app.js"></script>
-  </body>
+
+    <div id="groupButton">
+      <button id="piedra" type="button">
+        <img src="Imagenes/piedra.png" />
+      </button>
+      <button id="papel" type="button">
+        <img src="Imagenes/papel.png" />
+      </button>
+      <button id="tijera" type="button">
+        <img src="Imagenes/tijera.png" />
+      </button>
+    </div>
+  </div>
+  <footer>
+    <div id="imageContainer">
+      <a href="https://www.facebook.com/Gaston.E.Rocha/" target="_blank"><img class="socialMedia"
+          src="Imagenes/iconofacebook.png" /></a>
+      <a href="https://api.whatsapp.com/send?phone=5493815937820" target="_blank"><img class="socialMedia"
+          src="Imagenes/iconowhatsapp.png" /></a>
+      <a href="https://www.instagram.com/gastonedgardorocha/" target="_blank"><img class="socialMedia"
+          src="Imagenes/iconoinstagram.png" /></a>
+    </div>
+  </footer>
+  <script src="app.js"></script>
+</body>
+
 </html>
