Add icon gmail and <a> in html

--- a/index.html
+++ b/index.html
@@ -41,6 +41,8 @@
           src="Imagenes/iconofacebook.png" /></a>
       <a href="https://api.whatsapp.com/send?phone=5493815937820" target="_blank"><img class="socialMedia"
           src="Imagenes/iconowhatsapp.png" /></a>
+      <a href="mailto:gstnedgrdrch93@gmail.com" target="_blank"><img class="socialMedia"
+          src="Imagenes/iconogmail.png" /></a>
       <a href="https://www.instagram.com/gastonedgardorocha/" target="_blank"><img class="socialMedia"
           src="Imagenes/iconoinstagram.png" /></a>
     </div>
